<resources>
    <string name="app_name">Numeral Calculus</string>

    <string name="menu_base_conversion">Base Conversion</string>
    <string name="nav_base_conversion">Base Conversion</string>
    <string name="hint_base_conversion_input">Enter your number here</string>
    <string name="label_convert">Convert</string>
    <string name="error_invalid_number_base">Invalid input for selected base!</string>
    <string name="number_conversion_result">Base %1$d: %2$s</string>

    <!-- Preference Titles -->

    <!-- Preference cache results -->

    <string name="cache_results_header">Cache</string>
    <string name="label_cache_results">Cache Results</string>
    <string name="clean_cache_results">Clean Cache Results</string>
    <string name="label_desired_basis">Input basis</string>
    <string name="basis_conversion_input_hint">Enter the number to be convert</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="basis_seek_label" translatable="false">Base %1$d</string>
    <string name="error_out_bound">This number is out of app conversion boundaries</string>
    <string name="nav_linear_system">Linear System</string>
    <string name="nav_linear_system_direct_method">Direct Method</string>
    <string name="nav_fractions">Fractions</string>
    <string name="nav_fractions_basic_ops">Basic Operations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Result</string>
    <string name="calculate">Calculate</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>
