<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory
        app:title="@string/cache_results_header">
        <SwitchPreferenceCompat
            app:key="cache"
            app:title="@string/label_cache_results" />
        <Preference
            app:title="@string/clean_cache_results"
            app:key="clean_cache"
            app:dependency="cache"
            />
    </PreferenceCategory>

</PreferenceScreen>
